# rust-binvec

./: Cargo.toml  README.md
src/: error.rs  iter.rs  lib.rs
src/error/: mod.rs
