[package]
name = "binvec"
version = "0.1.1"
edition = "2024"
authors = ["Jababa <im@jababa.im>"]
description = "It is a binary vector type developed in Rust to use memory efficiently. It is characterized by using the minimum memory space to store an array of bool values."
license = "MIT"

[dependencies]
